--- a/driver/src/test/resources/log4j2.properties
+++ b/driver/src/test/resources/log4j2.properties
@@ -6,8 +6,9 @@ appender.console.type = Console
 appender.console.name = STDOUT
 appender.console.layout.type = PatternLayout
 appender.console.layout.pattern = %d %p [%t] [%c] %m%n
-logger.console.name=veil.hdp.hive.jdbc
-logger.console.level=info
 
-rootLogger.level = warn
+logger.console.name = veil.hdp.hive.jdbc
+logger.console.level = debug
+
+rootLogger.level = debug
 rootLogger.appenderRef.stdout.ref = STDOUT
