--- a/machines/binary/Vagrantfile
+++ b/machines/binary/Vagrantfile
@@ -34,6 +34,7 @@ Vagrant.configure("2") do |config|
     config.vm.provision "shell", inline: "service network restart", run: "always"
 
     # provision VM
+    config.vm.provision "file", source: "mysql.repo", destination: "/tmp/install/mysql.repo"
     config.vm.provision "file", source: "hosts", destination: "/tmp/install/hosts"
     config.vm.provision "file", source: "blueprint.json", destination: "/tmp/install/blueprint.json"
     config.vm.provision "file", source: "create-cluster.json", destination: "/tmp/install/create-cluster.json"
